--- a/src/App.css
+++ b/src/App.css
@@ -193,9 +193,27 @@ Footer
 /* ********************
 Media Queries
 ******************** */
+
+/* Iphone X */
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait) {
     .connect {
         display: block;
         text-align: center;
+    }
+
+    .intro {
+        width: 100%;
+    }
+}
+/* Iphone XR */
+
+@media only screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait) {
+    .connect {
+        display: block;
+        text-align: center;
+    }
+
+    .intro {
+        width: 100%;
     }
 }
