--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
 }
 
 .arrowspace {
-     margin: 10rem;
+    margin: 10rem;
 }
 
 .project-space {
@@ -105,6 +105,12 @@ Intro
     text-align: center;
     letter-spacing: 1rem;
     font-weight: 300;
+}
+
+.about-p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* ********************
@@ -243,6 +249,6 @@ Media Queries
 
     .intro-p {
         font-size: 1.3rem;
-        color: #ff1122
+        color: #ff1122;
     }
 }
