--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,7 @@ Intro
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 /* ********************
