--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,6 @@ body {
     margin: 5rem;
 }
 
-.arrowspace {
-    margin: 10rem;
-}
-
 .project-space {
     margin: 3rem;
 }
@@ -73,8 +69,7 @@ Icons
 /* ********************
 Intro
 ******************** */
-
-#brito {
+x #brito {
     background: linear-gradient(
             to right,
             rgba(0, 0, 0, 0.621),
@@ -83,28 +78,6 @@ Intro
         url(./images/hero.jpg) no-repeat center center/cover;
     height: 100vh;
     position: relative;
-}
-
-.intro {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.intro-lead {
-    font-size: 5rem;
-}
-
-.intro-p {
-    font-size: 2rem;
-}
-
-.intro-lead,
-.intro-p {
-    text-align: center;
-    letter-spacing: 1rem;
-    font-weight: 300;
 }
 
 .about-p {
